crates/tlang_parser/tests/snapshots/parser_dict__dictionary_literal_shorthand.snap
---
source: crates/tlang_parser/tests/parser_dict.rs
expression: "parse! (r\"let x = { foo, bar };\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 7,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: LineColumn(
                line: 0,
                column: 4,
              ),
              end: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 4,
            ),
            end: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 6,
          kind: Dict([
            (Expr(
              id: 4,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "foo",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 10,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 13,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 10,
                ),
                end: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            ), Expr(
              id: 4,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "foo",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 10,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 13,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 10,
                ),
                end: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            )),
            (Expr(
              id: 5,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "bar",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 15,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 18,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 15,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 15,
                ),
                end: LineColumn(
                  line: 0,
                  column: 18,
                ),
              ),
            ), Expr(
              id: 5,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "bar",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 15,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 18,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 15,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 15,
                ),
                end: LineColumn(
                  line: 0,
                  column: 18,
                ),
              ),
            )),
          ]),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 8,
            ),
            end: LineColumn(
              line: 0,
              column: 20,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 21,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 21,
    ),
  ),
)
