crates/tlang_parser/tests/snapshots/parser_dict__dictionary_literal_shorthand_trailing_comma.snap
---
source: crates/tlang_parser/tests/parser_dict.rs
expression: "parse! (r\"let x = { foo, bar, };\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 7,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 6,
          kind: Dict([
            (Expr(
              id: 4,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "foo",
                    span: Span(
                      start: 10,
                      end: 13,
                      start_lc: LineColumn(
                        line: 0,
                        column: 10,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 13,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 10,
                  end: 13,
                  start_lc: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 10,
                end: 13,
                start_lc: LineColumn(
                  line: 0,
                  column: 10,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            ), Expr(
              id: 4,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "foo",
                    span: Span(
                      start: 10,
                      end: 13,
                      start_lc: LineColumn(
                        line: 0,
                        column: 10,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 13,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 10,
                  end: 13,
                  start_lc: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 10,
                end: 13,
                start_lc: LineColumn(
                  line: 0,
                  column: 10,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            )),
            (Expr(
              id: 5,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "bar",
                    span: Span(
                      start: 15,
                      end: 18,
                      start_lc: LineColumn(
                        line: 0,
                        column: 15,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 18,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 15,
                  end: 18,
                  start_lc: LineColumn(
                    line: 0,
                    column: 15,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 15,
                end: 18,
                start_lc: LineColumn(
                  line: 0,
                  column: 15,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 18,
                ),
              ),
            ), Expr(
              id: 5,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "bar",
                    span: Span(
                      start: 15,
                      end: 18,
                      start_lc: LineColumn(
                        line: 0,
                        column: 15,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 18,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 15,
                  end: 18,
                  start_lc: LineColumn(
                    line: 0,
                    column: 15,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 15,
                end: 18,
                start_lc: LineColumn(
                  line: 0,
                  column: 15,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 18,
                ),
              ),
            )),
          ]),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 8,
            end: 21,
            start_lc: LineColumn(
              line: 0,
              column: 8,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 21,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 0,
        end: 22,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 22,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 22,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 22,
    ),
  ),
)
