crates/tlang_parser/tests/snapshots/parser_dict__dictionary_literal_trailing_comma.snap
---
source: crates/tlang_parser/tests/parser_dict.rs
expression: "parse! (r\"let x = { foo: 1, bar: 2, };\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 9,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 8,
          kind: Dict([
            (Expr(
              id: 4,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "foo",
                    span: Span(
                      start: 10,
                      end: 13,
                      start_lc: LineColumn(
                        line: 0,
                        column: 10,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 13,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 10,
                  end: 13,
                  start_lc: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 10,
                end: 13,
                start_lc: LineColumn(
                  line: 0,
                  column: 10,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            ), Expr(
              id: 5,
              kind: Literal(UnsignedInteger(1)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 15,
                end: 16,
                start_lc: LineColumn(
                  line: 0,
                  column: 15,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 16,
                ),
              ),
            )),
            (Expr(
              id: 6,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "bar",
                    span: Span(
                      start: 18,
                      end: 21,
                      start_lc: LineColumn(
                        line: 0,
                        column: 18,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 21,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 18,
                  end: 21,
                  start_lc: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 21,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 18,
                end: 21,
                start_lc: LineColumn(
                  line: 0,
                  column: 18,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 21,
                ),
              ),
            ), Expr(
              id: 7,
              kind: Literal(UnsignedInteger(2)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 23,
                end: 24,
                start_lc: LineColumn(
                  line: 0,
                  column: 23,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 24,
                ),
              ),
            )),
          ]),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 8,
            end: 27,
            start_lc: LineColumn(
              line: 0,
              column: 8,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 27,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 0,
        end: 28,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 28,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 28,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 28,
    ),
  ),
)
