crates/tlang_parser/tests/snapshots/parser_dict__for_identifier_block.snap
---
source: crates/tlang_parser/tests/parser_dict.rs
expression: "parse! (r\"for x in foo {}\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 8,
        kind: ForLoop(ForLoop(
          id: 7,
          pat: Pat(
            id: 4,
            kind: Identifier(Ident(
              name: "x",
              span: Span(
                start: 4,
                end: 5,
                start_lc: LineColumn(
                  line: 0,
                  column: 4,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 5,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          ),
          iter: Expr(
            id: 5,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "foo",
                  span: Span(
                    start: 9,
                    end: 12,
                    start_lc: LineColumn(
                      line: 0,
                      column: 9,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 12,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 9,
                end: 12,
                start_lc: LineColumn(
                  line: 0,
                  column: 9,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 12,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 9,
              end: 12,
              start_lc: LineColumn(
                line: 0,
                column: 9,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 12,
              ),
            ),
          ),
          acc: None,
          block: Block(
            id: 6,
            statements: [],
            expression: None,
            span: Span(
              start: 13,
              end: 15,
              start_lc: LineColumn(
                line: 0,
                column: 13,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 15,
              ),
            ),
          ),
          else_block: None,
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 15,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 15,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 15,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 15,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 15,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 15,
    ),
  ),
)
