crates/tlang_parser/tests/snapshots/parser_dict__function_call_with_dictionary_no_parens.snap
---
source: crates/tlang_parser/tests/parser_dict.rs
expression: "parse! (r\"foo { foo: 1, bar: 2 };\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 10,
        kind: Call(CallExpression(
          callee: Expr(
            id: 4,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "foo",
                  span: Span(
                    start: 0,
                    end: 3,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 3,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 0,
                end: 3,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 3,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 0,
              end: 3,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 3,
              ),
            ),
          ),
          arguments: [
            Expr(
              id: 9,
              kind: Dict([
                (Expr(
                  id: 5,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "foo",
                        span: Span(
                          start: 6,
                          end: 9,
                          start_lc: LineColumn(
                            line: 0,
                            column: 6,
                          ),
                          end_lc: LineColumn(
                            line: 0,
                            column: 9,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: 6,
                      end: 9,
                      start_lc: LineColumn(
                        line: 0,
                        column: 6,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 9,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 6,
                    end: 9,
                    start_lc: LineColumn(
                      line: 0,
                      column: 6,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 9,
                    ),
                  ),
                ), Expr(
                  id: 6,
                  kind: Literal(UnsignedInteger(1)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 11,
                    end: 12,
                    start_lc: LineColumn(
                      line: 0,
                      column: 11,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 12,
                    ),
                  ),
                )),
                (Expr(
                  id: 7,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "bar",
                        span: Span(
                          start: 14,
                          end: 17,
                          start_lc: LineColumn(
                            line: 0,
                            column: 14,
                          ),
                          end_lc: LineColumn(
                            line: 0,
                            column: 17,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: 14,
                      end: 17,
                      start_lc: LineColumn(
                        line: 0,
                        column: 14,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 17,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 14,
                    end: 17,
                    start_lc: LineColumn(
                      line: 0,
                      column: 14,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 17,
                    ),
                  ),
                ), Expr(
                  id: 8,
                  kind: Literal(UnsignedInteger(2)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 19,
                    end: 20,
                    start_lc: LineColumn(
                      line: 0,
                      column: 19,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 20,
                    ),
                  ),
                )),
              ]),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 0,
                end: 0,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
              ),
            ),
          ],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 22,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 22,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 23,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 23,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 23,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 23,
    ),
  ),
)
